Fixed issue with the quote and spacing

--- a/styles.css
+++ b/styles.css
@@ -26,6 +26,7 @@ body {
 .nav {
     display: flex;
     flex-direction: row;
+    padding-top: 25px;
 }
 
 ul {
@@ -51,6 +52,7 @@ h1 {
     display: flex;
     flex-direction: row;
     margin: 50px;
+    padding: 32px 100px 156px 40px;
 }
 
 .content-right {
@@ -108,6 +110,7 @@ h2 {
     text-align: center;
     justify-content: center;
     gap: 52px;
+    padding: 32px 400px 156px 400px;
 }
   
 .contentinfo {
@@ -125,12 +128,14 @@ h2 {
 
 .quote {
     display: flex;
-    justify-content: center;
-    width: 100%;
-    height: 300px;
+    flex-direction: column;
+    padding: 124px 400px 124px 400px;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 38px;
+    font-style: italic;
     color: #1F2937;
     background-color: #E5E7EB;
-    font-size: 36px;
   }
   
   .quote-text {
@@ -141,7 +146,7 @@ h2 {
   
   .quote-name {
       display: flex;
-      align-items: end;
+      justify-content: end;
   }
   
   .quote-name::before {
@@ -153,6 +158,8 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 30px;
 }
 
 .blue-container {
@@ -191,8 +198,8 @@ h4 {
 .btn-last-div {
     display: inline-block;
     padding: 10px 20px;
-    background-color: #3882f6; /* Choose your desired button color */
-    color: #fff; /* Choose button text color */
+    background-color: #3882f6; 
+    color: #fff; 
     text-decoration: none;
     border-radius: 5px;
     border:2px solid #fff;
